--- a/gb/20/7/1/n12225675.md
+++ b/gb/20/7/1/n12225675.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/aktfbh302/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/aktfbh302/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/aktfbh302/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/aktfbh302/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/aktfbh302/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/aktfbh302/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/aktfbh302/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/aktfbh302/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/aktfbh302/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/aktfbh302/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/aktfbh302/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/aktfbh302/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/aktfbh302/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/aktfbh302/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/aktfbh302/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/aktfbh302/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/aktfbh302/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/aktfbh302/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/aktfbh302/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/aktfbh302/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/aktfbh302/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/aktfbh302/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/aktfbh302/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/aktfbh302/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/aktfbh302/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/aktfbh302/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/aktfbh302/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/aktfbh302/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/aktfbh302/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/aktfbh302/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/aktfbh302/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/aktfbh302/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/aktfbh302/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/aktfbh302/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/aktfbh302/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/aktfbh302/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/aktfbh302/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/aktfbh302/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/aktfbh302/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/aktfbh302/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/aktfbh302/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/aktfbh302/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/aktfbh302/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/aktfbh302/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/aktfbh302/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/aktfbh302/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/aktfbh302/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>总理：港版国安法背弃一国两制造成破坏</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/07/GettyImages-1253188559-600x400.jpg" />
 <h6>新西兰总理杰辛达·阿德恩（Jacinda Ardern）表示，港版国安法背弃一国两制。新西兰与五眼联盟合作伙伴在这个问题上所采取的立场几乎没有什么区别。图为新西兰总理杰辛达·阿德恩(Hagen Hopkins/Getty Images)
 </h6>
 <hr>
-<p>【大纪元2020年07月02日讯】<span style="font-weight: 400;">（大纪元记者代希<ahref="https://github.com/aktfbh302/djy/blob/master/gb/tag/%E6%96%B0%E8%A5%BF%E5%85%B0.md#1">新西兰</a>编译报导）周</span><span style="font-weight: 400;">二(6月30日)北京强行通过了备受们民主社会关注的<ahref="https://github.com/aktfbh302/djy/blob/master/gb/tag/%E6%B8%AF%E7%89%88%E5%9B%BD%E5%AE%B6%E5%AE%89%E5%85%A8%E6%B3%95.md#1">港版国家安全法</a>，引起<ahref="https://github.com/aktfbh302/djy/blob/master/gb/tag/%E5%9B%BD%E9%99%85%E7%A4%BE%E4%BC%9A.md#1">国际社会</a><ahref="https://github.com/aktfbh302/djy/blob/master/gb/tag/%E6%8A%97%E8%AE%AE.md#1">抗议</a>及强烈<ahref="https://github.com/aktfbh302/djy/blob/master/gb/tag/%E8%B0%B4%E8%B4%A3.md#1">谴责</a>。</span></p>
-<p><ahref="https://github.com/aktfbh302/djy/blob/master/gb/tag/%E6%96%B0%E8%A5%BF%E5%85%B0.md#1">新西兰</a>外交部长温斯顿·彼得斯（WinstonPeters）7月1日表示，新西兰政府对中国（共）全国人大常委会通过香港国家安全法深感失望。</p>
+<p>【大纪元2020年07月02日讯】<span style="font-weight: 400;">（大纪元记者代希<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%96%B0%E8%A5%BF%E5%85%B0.md#1">新西兰</a>编译报导）周</span><span style="font-weight: 400;">二(6月30日)北京强行通过了备受们民主社会关注的<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%B8%AF%E7%89%88%E5%9B%BD%E5%AE%B6%E5%AE%89%E5%85%A8%E6%B3%95.md#1">港版国家安全法</a>，引起<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%9B%BD%E9%99%85%E7%A4%BE%E4%BC%9A.md#1">国际社会</a><ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%8A%97%E8%AE%AE.md#1">抗议</a>及强烈<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%B0%B4%E8%B4%A3.md#1">谴责</a>。</span></p>
+<p><ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%96%B0%E8%A5%BF%E5%85%B0.md#1">新西兰</a>外交部长温斯顿·彼得斯（WinstonPeters）7月1日表示，新西兰政府对中国（共）全国人大常委会通过香港国家安全法深感失望。</p>
 <p><span style="font-weight: 400;">彼得斯表示:“新西兰一直强调，对这项强</span><span style="font-weight: 400;">加于香港的</span><span style="font-weight: 400;">法律</span><span style="font-weight: 400;">表示严重关</span><span style="font-weight: 400;">切。”他说:“在‘一国两制’的框架下，维持香港及其人民的高度自治和自由，与国际社会休戚相关。作为法治的坚定支持者，我们坚信维护香港安全，必须依照香港基本法所载的义务、其中所包含的联合国人权公约，以及1984年中英联合声明。”</span></p>
 <p>他还表达:“这是香港世代保障基本人权和自由的关键时刻。新西兰将仔细研究这项法例，并密切监察法例的执行情况，以及对香港市民的影响。”</p>
 <p><span style="font-weight: 400;">新西兰总理</span><span style="font-weight: 400;">杰辛达·阿德恩（Jacinda Ardern）在被要求对港版国安法做出回应时说，</span><span style="font-weight: 400;">新西兰</span><span style="font-weight: 400;">政府已经明确表态。</span></p>
@@ -15,7 +15,7 @@
 <p>绿党司法发言人戈拉兹·格哈拉曼（Golriz Ghahraman）在一条推文中称，面对中共的压迫，我们与香港人站在一起。她称港版国安法是“严重违反民主和人权的行为”。</p>
 <p><span style="font-weight: 400;">英国驻联合国大使朱利安·布雷思韦特（Julian Braithwaite）代表</span><ahref="https://www.gov.uk/government/speeches/un-human-rights-council-44-cross-regional-statement-on-hong-kong-and-xinjiang"><span style="font-weight: 400;">包括澳大利亚和纽西兰在内</span></a><span style="font-weight: 400;">的27个国家发表联合声明，对港版国安法表示关注。?</span></p>
 <p><span style="font-weight: 400;">美国国务卿迈克·庞培（Mike Pompeo）称，港版</span><span style="font-weight: 400;">国安法终结了香港的自由，并暴露了中共最大的恐惧：本国人民的自由意志和自由思想。</span></p>
-<p><span style="font-weight: 400;">美国众议院议长南茜·佩洛西（Nancy Pelosi）称，</span><span style="font-weight: 400;">北京所谓的“国家安全”法的目的是恐吓、威逼和压制香港人的言论。所有热爱自由的人必须团结起来<ahref="https://github.com/aktfbh302/djy/blob/master/gb/tag/%E8%B0%B4%E8%B4%A3.md#1">谴责</a>这项法律。</span></p>
+<p><span style="font-weight: 400;">美国众议院议长南茜·佩洛西（Nancy Pelosi）称，</span><span style="font-weight: 400;">北京所谓的“国家安全”法的目的是恐吓、威逼和压制香港人的言论。所有热爱自由的人必须团结起来<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%B0%B4%E8%B4%A3.md#1">谴责</a>这项法律。</span></p>
 <p><span style="font-weight: 400;">与此同时，美国正着手终止香港的特殊贸易条款。特朗普政府表示，将禁止向香港出口国防产品，并将很快要求对出售民用和军用物品颁发许可证。美国国会还采取行动，对被认为与香港政治镇压有关的人实施制裁，包括</span><span style="font-weight: 400;">警察官员</span><span style="font-weight: 400;">。</span></p>
 <p><span style="font-weight: 400;">该法案在周二（6月30日）晚上11点生效后，香港警方在Facebook上表示，他们已经逮捕了30多人，罪名包括非法集会和违反国家安全法。</span></p>
 <p><span style="font-weight: 400;">至此，香港反对派主要人物的命运引起了人们的担忧，他们中的一些人已经因参与抗议活动而被起诉，此外还有定于9月份举行的立法会选举的候选人被取消资格。香港最著名的活动人士王振华(Joshua Wong)对此做出回应，称他将退出他迄今一直领导的亲民主组织Demosisto。</span></p>
@@ -36,41 +36,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/aktfbh302/djy/blob/master/gb/20/3/7/n11922895.md#1">中共病毒：维州新增73例 新州对疫区关边界 擅入者或坐牢</a></li>
-<li><a href="https://github.com/aktfbh302/djy/blob/master/gb/20/5/20/n12122524.md#1">加拿大各省最新疫情数据</a></li>
-<li><a href="https://github.com/aktfbh302/djy/blob/master/gb/20/6/30/n12223076.md#1">王友群：“一国两制”已死 中共即将灭亡</a></li>
-<li><a href="https://github.com/aktfbh302/djy/blob/master/gb/20/6/30/n12223114.md#1">奥克兰APEC峰会取消 峰会将“虚拟化”</a></li>
-<li><a href="https://github.com/aktfbh302/djy/blob/master/gb/20/7/1/n12223708.md#1">加州人注意 进入纽约等3州时必须自我隔离14天</a></li>
-<li><a href="https://github.com/aktfbh302/djy/blob/master/gb/20/6/30/n12220794.md#1">【新西兰疫情6.30】</a></li>
-<li><a href="https://github.com/aktfbh302/djy/blob/master/gb/20/6/29/n12220561.md#1">新航vs澳航：是刀耕火种还是猛然出击？</a></li>
-<li><a href="https://github.com/aktfbh302/djy/blob/master/gb/20/6/29/n12218327.md#1">【新西兰疫情6.29】今日新增2例昨日新增4例 1人住院中</a></li>
-<li><a href="https://github.com/aktfbh302/djy/blob/master/gb/20/6/28/n12216813.md#1">新增2例 其中1例曾去奥克兰医院急诊科就诊</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/7/n11922895.md#1">维州新增7126例病毒感染 新州新增10650例</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/5/20/n12122524.md#1">加拿大各省最新疫情数据</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/6/30/n12223076.md#1">王友群：“一国两制”已死 中共即将灭亡</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/6/30/n12223114.md#1">奥克兰APEC峰会取消 峰会将“虚拟化”</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/7/1/n12223708.md#1">加州人注意 进入纽约等3州时必须自我隔离14天</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616295.md#1">抗议第23天 国会外起火 总理谴责暴力行为</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614845.md#1">抗议第23天 警方的大规模行动遭强烈抵抗</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13612771.md#1">奥克兰西区END CCP 游行 华人：三退后心里踏实了</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13612590.md#1">抗议第22天 淋浴屋被拆后 警车轮胎被割</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612150.md#1">新西兰与英国签订“历史性”自由贸易协定</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/10/n10043633.md#1" target="_blank">叶光庭：共产党把我从“左派”改造成“右派”</a></li><li><a href="https://github.com/aktfbh302/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/11/27/n8533466.md#1" target="_blank">一位医生太太见证医学无法达到的奇迹</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/22/n10994378.md#1" target="_blank">陆文：迫害佛法最终害了自己</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/24/n11136773.md#1" target="_blank">捷克参议院通过决议案 要求中共停止迫害</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/aktfbh302/djy/blob/master/gb/20/6/29/n12220225.md#1">【役情最前线】香港坠落 朱镕基震怒</a></li>
-<li><a href="https://github.com/aktfbh302/djy/blob/master/gb/20/6/29/n12219819.md#1">【直播】反国安恶法 港人7.1维园大游行</a></li>
-<li><a href="https://github.com/aktfbh302/djy/blob/master/gb/20/6/30/n12220995.md#1">中共威胁将限制美国人签证 蓬佩奥回击</a></li>
-<li><a href="https://github.com/aktfbh302/djy/blob/master/gb/20/6/29/n12219887.md#1">钟原：政治局“云会议”泄七常委分散保命</a></li>
-<li><a href="https://github.com/aktfbh302/djy/blob/master/gb/20/6/30/n12221534.md#1">郝海东支持民众抗共 “共产党 你们完了”</a></li>
-<li><a href="https://github.com/aktfbh302/djy/blob/master/gb/20/6/29/n12220609.md#1">为救汪小菲事业八折卖豪宅？大S经纪人回应</a></li>
-<li><a href="https://github.com/aktfbh302/djy/blob/master/gb/20/6/29/n12219022.md#1">传黄秋生拍宣传片喊价228万？北市观传局回应</a></li>
-<li><a href="https://github.com/aktfbh302/djy/blob/master/gb/20/6/29/n12220251.md#1">汪峰49岁生日 章子怡携女儿跳萤光舞送祝福</a></li>
-<li><a href="https://github.com/aktfbh302/djy/blob/master/gb/20/6/30/n12222874.md#1">中共通过港版国安法 何韵诗脸书发文诉心声</a></li>
-<li><a href="https://github.com/aktfbh302/djy/blob/master/gb/20/6/29/n12220365.md#1">与黄秋生合演新片香港开红盘 林嘉欣发表感言</a></li>
-<li><a href="https://github.com/aktfbh302/djy/blob/master/gb/20/6/27/n12215574.md#1">《地母经》预言的2020年中国水灾和后果</a></li>
-<li><a href="https://github.com/aktfbh302/djy/blob/master/gb/12/1/21/n3492348.md#1">令人感动千年    范仲淹</a></li>
-<li><a href="https://github.com/aktfbh302/djy/blob/master/gb/20/6/29/n12219023.md#1">北京冰雹状似中共病毒 这是末日预兆？</a></li>
-<li><a href="https://github.com/aktfbh302/djy/blob/master/gb/11/3/19/n3202908.md#1">历史故事：范蠡知进退</a></li>
-<li><a href="https://github.com/aktfbh302/djy/blob/master/gb/20/6/24/n12209542.md#1">药王孙思邈的预言神通</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613897.md#1">【十字路口】锁链女遭拐卖凌虐 幕后大黑手曝光？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/aktfbh302/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/aktfbh302/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/7/1/n12225675.htm">总理：港版国安法背弃一国两制造成破坏</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/7/1/n12225675.htm">总理：港版国安法背弃一国两制造成破坏</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/aktfbh302/djy/blob/master/gb/20/7/1/n12225675.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/aktfbh302/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aktfbh302/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/aktfbh302/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/aktfbh302/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/aktfbh302/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aktfbh302/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/aktfbh302/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aktfbh302/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/aktfbh302/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aktfbh302/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/aktfbh302/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aktfbh302/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/aktfbh302/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aktfbh302/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/aktfbh302/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aktfbh302/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/aktfbh302/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aktfbh302/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/aktfbh302/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aktfbh302/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/aktfbh302/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aktfbh302/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/aktfbh302/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aktfbh302/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/aktfbh302/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aktfbh302/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/aktfbh302/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aktfbh302/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/aktfbh302/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aktfbh302/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/aktfbh302/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aktfbh302/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/aktfbh302/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aktfbh302/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/aktfbh302/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aktfbh302/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/aktfbh302/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aktfbh302/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/aktfbh302/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aktfbh302/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/aktfbh302/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aktfbh302/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/aktfbh302/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aktfbh302/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/aktfbh302/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aktfbh302/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/aktfbh302/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aktfbh302/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/20/7/1/n12225675.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
